# legacy-opengl-example

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
res/: CMakeLists.txt
res/off/: CMakeLists.txt  unitcube.off
src/: CMakeLists.txt  camera.h  glFuncs.h  keyboard.h  main.cpp  object.cpp  object.h  scene.h  window.cpp  window.h
src/datastructures/: object.h  scene.cpp  scene.h  window.cpp  window.h
src/loaders/: CMakeLists.txt  fileIO.cpp  fileIO.h  objLoader.cpp  offLoader.cpp  offLoader.h
src/scenes/: CMakeLists.txt  scene.cpp  scene.h
src/scenes/mainmenu/: CMakeLists.txt  keyboard.cpp  keyboard.h  mainScene.cpp  mainScene.h
test/: CMakeLists.txt  objLoaderTests.cpp
